<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp" >

    <TextView
        android:id="@+id/introView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/intro_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/InputFormLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="325dp"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.58"
                android:gravity="center"
                android:text="@string/radio_group_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <RadioGroup
                android:id="@+id/inputRadioGroup"
                android:layout_width="144dp"
                android:layout_height="136dp"
                android:layout_marginLeft="0dp" >

                <RadioButton
                    android:id="@+id/cookieButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rButton1" />

                <RadioButton
                    android:id="@+id/cakeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rButton3" />

                <RadioButton
                    android:id="@+id/candyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rButton4" />

                <RadioButton
                    android:id="@+id/pieButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rButton2" />

            </RadioGroup>

            <ImageView
                android:id="@+id/dessert_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/dessert_image_text"
                android:src="@drawable/cookies" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nothingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/nothingView"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="127dp"
            android:contentDescription="@string/dessert_image_text"
            android:src="@drawable/sad" />
    </LinearLayout>

</RelativeLayout>